--- a/Site1.Master
+++ b/Site1.Master
@@ -75,23 +75,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white " href="../pages/virtual-reality.html">
+              <a class="nav-link text-white " href="upload.aspx">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">view_in_ar</i>
                 </div>
-                <span class="nav-link-text ms-1">Virtual Reality</span>
+                <span class="nav-link-text ms-1">Upload</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white " href="../pages/rtl.html">
-                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                  <i class="material-icons opacity-10">format_textdirection_r_to_l</i>
-                </div>
-                <span class="nav-link-text ms-1">RTL</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white " href="../pages/notifications.html">
+              <a class="nav-link text-white " href="notification.aspx">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">notifications</i>
                 </div>
@@ -102,7 +94,7 @@
               <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white " href="../pages/profile.html">
+              <a class="nav-link text-white " href="users_view.aspx">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">person</i>
                 </div>
@@ -110,7 +102,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white " href="../pages/sign-in.html">
+              <a class="nav-link text-white " href="login.aspx">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">login</i>
                 </div>
@@ -118,11 +110,11 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white " href="../pages/sign-up.html">
+              <a class="nav-link text-white " href="sign_up.aspx">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">assignment</i>
                 </div>
-                <span class="nav-link-text ms-1">Sign Up</span>
+                <span class="nav-link-text ms-1">Request</span>
               </a>
             </li>
           </ul>
