--- a/Site1.Master
+++ b/Site1.Master
@@ -51,6 +51,8 @@
         <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
           <ul class="navbar-nav">
             <li class="nav-item">
+                <% if (Session["status"].ToString() == "admin")
+                    { %>
               <a class="nav-link text-white active bg-gradient-warning" href="dashboard.aspx ">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">dashboard</i>
@@ -74,6 +76,9 @@
                 <span class="nav-link-text ms-1">Upload</span>
               </a>
             </li>
+              <%} %>
+              <% if (Session["status"].ToString() != null)
+                  { %>
             <li class="nav-item">
               <a class="nav-link text-white " href="notification.aspx">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -93,6 +98,7 @@
                 <span class="nav-link-text ms-1">Profile</span>
               </a>
             </li>
+              <%} %>
             <li class="nav-item">
               <a class="nav-link text-white " href="login.aspx">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
